2007 04 01 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* XFunctions.m: return right after XKillClient() to avoid complaint.

2007 03 16 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Add support for freedesktop.org base directories.

2007 02 17 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Format README in reStructuredText.

2006-12-16 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* XFunctions: add XGNUstepWindowLevel() for gnustep window level;
	* XFunctions: remove as much memory as possible.
          If AZDock becomes unstable, revert this change. 

2006-12-06  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Install by default in SYSTEM domain (done with 
	GNUSTEP_SYSTEM_DOMAIN extension recently added to gnustep-make and not 
	yet released).

2006-11-18 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Remove warnings for GCC-4.1.

2006-10-20 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Return 0 if number of desktops is not available.

2006-10-01  Quentin Mathe <qmathe@club-internet.fr>

	* Comment on IconWindowHint.

2006-09-26  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Modified to include 'etoile.make'.

2006-09-24 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Use XGetCommand to get WM_COMMAND property.

2006-09-03 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* XFunctions.h:
	* XFunctions.m:
	Acess basic x window properties.

2006-05-28 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Add XScreen category.

2006-05-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Add -reserveScreenAreaOn:width:start:end:
	* Add skipTaskbarAndPager.
	* Use BSD license.
	* Initial import.
