@@ -138,6 +138,7 @@ unsigned long XWindowState(Window win)
 {
   Display *dpy = (Display*)[GSCurrentServer() serverDevice];
 
+  unsigned long return_value = -1;
   unsigned long *data = NULL;
   unsigned long count;
   Atom prop = XInternAtom(dpy, "WM_STATE", False);
@@ -150,13 +151,15 @@ unsigned long XWindowState(Window win)
                                   &after_ret, (unsigned char **)&data);
   if ((result != Success)) {
     NSLog(@"Error: cannot get client state");
-    if (data != NULL) {
-      XFree(data);
-    }
-    return -1;
   }
-  // Free data ?
-  return data[0];
+  else
+  {
+    return_value = data[0];
+  }
+  if (data != NULL) {
+    XFree(data);
+  }
+  return return_value; 
 }
 
 Atom *XWindowNetStates(Window win, unsigned long *count)
@@ -203,7 +206,8 @@ NSString* XWindowCommandPath(Window win)
   char **argv_return;
   
   int result = XGetCommand(dpy, win, &argv_return, &argc_return);
-  if ((result == 0) || (argc_return == 0)) {
+  if ((result == 0) || (argc_return == 0)) 
+  {
     //NSLog(@"No command available");
     return nil;
   }
@@ -290,29 +294,62 @@ BOOL XGNUstepWindowLevel(Window win, int *level)
 {
   Display *dpy = (Display*)[GSCurrentServer() serverDevice];
 
+  BOOL result_value = NO;
   unsigned long *data = NULL;
   Atom prop = XInternAtom(dpy, _GNUSTEP_WM_ATTR, False);
   Atom type_ret;
   int format_ret;
-  unsigned long after_ret, count;;
+  unsigned long after_ret, count;
   int result = XGetWindowProperty(dpy, win, prop,
                                   0, 0x7FFFFFFF, False, prop,
                                   &type_ret, &format_ret, &count,
                                   &after_ret, (unsigned char **)&data);
-  if ((result == Success)) {
-    if (data[0] & GSWindowLevelAttr) {
+  if ((result == Success)) 
+  {
+    if (data[0] & GSWindowLevelAttr) 
+    {
       *level = data[2];
-      if (data != NULL) {
-        XFree(data);
-      }
-      return YES;
+      result_value = YES;
     }
   }
-  if (data != NULL) {
+  if (data != NULL) 
+  {
     XFree(data);
   }
-  return NO;
+  return result_value;
 }
+
+Window XWindowActiveWindow()
+{
+  Display *dpy = (Display*)[GSCurrentServer() serverDevice];
+  Window root_win = RootWindow(dpy, [[NSScreen mainScreen] screenNumber]);
+  Atom X_NET_ACTIVE_WINDOW = XInternAtom(dpy, "_NET_ACTIVE_WINDOW", False);
+
+  Window window = None;
+  unsigned long num;
+  unsigned long *data = NULL;
+  Atom type_ret;
+  int format_ret;
+  unsigned long after_ret;
+  int result = XGetWindowProperty(dpy, root_win, X_NET_ACTIVE_WINDOW,
+                                  0, 0x7FFFFFFF, False, XA_WINDOW,
+                                  &type_ret, &format_ret, &num,
+                                  &after_ret, (unsigned char **)&data);
+  if ((result != Success)) 
+  {
+    NSLog(@"Error: cannot get active window.");
+  }
+  else
+  {
+    window = data[0];
+  }
+  if (data != NULL)
+  {
+    XFree(data);
+  }
+  return window;
+}
+
 
 /* Freedesktop.org stuff */
 NSString *XDGConfigHomePath()
